--- a/spider/package.json
+++ b/spider/package.json
@@ -11,9 +11,11 @@
   "dependencies": {
     "async": "^2.1.4",
     "cheerio": "^0.22.0",
+    "eventproxy": "^0.3.5",
     "superagent": "^3.4.1"
   },
   "devDependencies": {
-    "express": "^4.14.1"
+    "express": "^4.14.1",
+    "mysql": "^2.13.0"
   }
 }
